<resources>
    <string name="app_name">Guitar LEDgend</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="stats">Statistiques</string>
    <string name="startPlay">Start</string>

    <string name="choisirPartition">Choisir partition</string>
    <string name="ajouterPartition">Ajouter partition</string>

    <string name="ok">OK</string>

    <string name="jouer">Jouer ?</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>

    <string name="jour">Jour</string>
    <string name="annee">Annee</string>
    <string name="mois">Mois</string>
    <string name="dernieres_stats">Dernières Stats</string>
    <string name="high_scores">High Scores</string>

    <string name="fichier">Fichier</string>
    <string name="nom">Nom</string>
    <string name="auteur">Auteur</string>
    <string name="genre">Genre</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_profils">ProfilsActivity</string>
    <string name="title_activity_bla">BlaActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ex">ExActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nouveau_profil">Nouveau Profil</string>
    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>

    <string name="vitesse">Vitesse ?</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_replay_area">ReplayAreaActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="autre">autre</string>
    <string name="Autre">Autre</string>
    <string name="age">Age</string>
    <string name="pref_header_profiles">Profils</string>
    <string name="title_activity_test_playing">TestPlayingActivity</string>
    <string name="pref_header_partitions">Partitions</string>


</resources>
