<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nom_choosePartition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/nom" />

    <EditText
        android:id="@+id/auteur_choosePartition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nom_choosePartition"
        android:hint="@string/auteur" />

    <EditText
        android:id="@+id/genre_choosePartition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/auteur_choosePartition"
        android:hint="@string/genre" />


    <Button
        style="@style/button"
        android:text="@string/ok"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok_button_ChoosePartitionActivity"
        android:minHeight="50dip"
        android:minWidth="90dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp" />


</RelativeLayout>