<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Ajout d'une partition"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:textSize="30sp"
        android:id="@+id/info2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/genre_addPartition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:background="@drawable/edit_background"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/auteur_addPartition"
        android:layout_alignLeft="@+id/auteur_addPartition"
        android:layout_alignStart="@+id/auteur_addPartition" />

    <EditText
        android:id="@+id/auteur_addPartition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/auteur"
        android:background="@drawable/edit_background"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/nom_addPartition"
        android:layout_alignLeft="@+id/nom_addPartition"
        android:layout_alignStart="@+id/nom_addPartition" />

    <EditText
        android:id="@+id/nom_addPartition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:background="@drawable/edit_background"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/fichier_addPartition"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fichier_addPartition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/fichier"
        android:layout_marginTop="59dp"
        android:background="@drawable/edit_background"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:layout_below="@+id/info2"
        android:layout_alignLeft="@+id/nom_addPartition"
        android:layout_alignStart="@+id/nom_addPartition" />

    <Button
        style="@style/button"
        android:text="@string/ok"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok_button_AddPartitionActivity"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/genre_addPartition"
        android:layout_centerHorizontal="true" />


</RelativeLayout>