<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/jouer"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jouer"
        android:layout_marginTop="92dp"
        android:layout_centerHorizontal="true"
        android:minHeight="50dip"
        android:minWidth="120dip"/>

    <Button
        style="@style/button"
        android:text="@string/oui"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oui_button"
        android:layout_marginTop="92dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/jouer"
        android:layout_alignParentLeft="true"
        android:minHeight="50dip"
        android:minWidth="120dip"/>

    <Button
        style="@style/button"
        android:text="@string/non"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/non_button"
        android:layout_marginTop="92dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/jouer"
        android:layout_alignParentRight="true"
        android:minHeight="50dip"
        android:minWidth="120dip"/>


</RelativeLayout>